- bump version to 2.2.0 - fix: https://github.com/padreati/rapaio-jupyter-kernel/issues/72 which enables support for Java 17 and above