@@ -4,16 +4,27 @@ The latest version can be found as a download in the releases section. Rapaio Ju
 installing tool which allow users to quickly install the kernel. The installer is contained in the jar distribution archive
 and can be called with:
 
-    java -jar ./rapaio-jupyter-kernel-2.0.0.jar -i -auto
+    java -jar ./rapaio-jupyter-kernel-2.2.0.jar -i -auto
 
 The `-auto` option uses an automatic mode for installing the kernel.
+
+Starting with version 2.2.0 there are also installation profiles. The role of an installation profile is just to offer a predefined 
+installation setup configured for some special situations. The same thing offered by an installation profile can be obtained by 
+manually changing the `kernel.json` file.
+
+The following profiles are defined:
+
+* `java -jar ./rapaio-jupyter-kernel-2.2.0.jar -i -auto -preview22` - enables preview features for Java 22 release.
+* `java -jar ./rapaio-jupyter-kernel-2.2.0.jar -i -auto -preview23` - enables preview features for Java 23 release.
+
+If no profile is specified, then the standard installation is performed which has a proper configurations for all Java versions >= 17. 
 
 ## Manual installation
 
 Without using the automatic mode, the installer asks in an interactive way various information to customize the installed kernel.
 An example of interactive installer mode:
 
-    shell: java -jar ./rapaio-jupyter-kernel-2.0.0.jar -i
+    shell: java -jar ./rapaio-jupyter-kernel-2.2.0.jar -i
     Installing in interactive mode.
     Select installation path:
     [1] /home/ANT.AMAZON.COM/tutuianu/.local/share/jupyter/kernels
@@ -21,29 +32,26 @@ An example of interactive installer mode:
     [3] /usr/share/jupyter/kernels
     1
     Select kernel dir (default 'rapaio-jupyter-kernel'):
-    rapaio-cistom-kernel
-    Select display name (default 'Java (rjk 2.0.0)'):
-    Rapaio Custom
+    
+    Select display name (default 'Java (rjk 2.2.0)'):
+    
     Select timeout in milliseconds:
-    -1
+    
     Select compiler options (default ''):
     
     Select init script (default '':
     
     Installation path: /home/ANT.AMAZON.COM/tutuianu/.local/share/jupyter/kernels
-    Kernel dir: rapaio-cistom-kernel
+    Kernel dir: rapaio-jupyter-kernel
     kernel.json:
     {
     "argv": [
     "java",
-    "--enable-preview",
-    "--add-modules",
-    "java.base,jdk.incubator.vector",
     "-jar",
-    "/home/ANT.AMAZON.COM/tutuianu/.local/share/jupyter/kernels/rapaio-cistom-kernel/rapaio-jupyter-kernel-2.0.0.jar",
+    "/home/ANT.AMAZON.COM/tutuianu/.local/share/jupyter/kernels/rapaio-jupyter-kernel/rapaio-jupyter-kernel-2.2.0.jar",
     "{connection_file}"
     ],
-    "display_name": "Rapaio Custom",
+    "display_name": "Java (rjk 2.2.0)",
     "language": "java",
     "interrupt_mode": "message",
     "env": {
@@ -53,7 +61,7 @@ An example of interactive installer mode:
     }
     }
     Installer is ready. Do you want to continue [Y|y/N|n] ?
-    Y
+    y
 
 
 All the previous steps can be realized manually by creating a kernel in a jupyter kernel specification directory. In that directory the
